--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/baza1234?useUnicode=true&characterEncoding=UTF-8
+spring.datasource.username=root
+spring.datasource.password=sifra123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
